<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--  core 로 대체 할 것 s  -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_area_title_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="54dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/title_study_1_bottom_sheet_study"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  core 로 대체 할 것 e  -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_parent_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_parent_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/area_input_height"
        android:layout_width="158dp"
        android:layout_height="134dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/md_theme_primary"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toStartOf="@id/area_input_weight"
        app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_area_title_bottom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_input_height"
                android:textColor="@color/md_theme_onPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_height_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:gravity="end|center_vertical"
                android:maxLines="1"
                android:text="0"
                android:textColor="@color/md_theme_onPrimary"
                app:layout_constraintBaseline_toBaselineOf="@id/label_unit_height"
                app:layout_constraintEnd_toStartOf="@id/label_unit_height"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="178" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_unit_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_unit_height"
                android:textColor="@color/md_theme_onPrimary"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/area_input_weight"
        android:layout_width="158dp"
        android:layout_height="134dp"
        android:layout_marginStart="12dp"
        app:cardBackgroundColor="@color/md_theme_primary"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/area_input_height"
        app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
        app:layout_constraintStart_toEndOf="@id/area_input_height"
        app:layout_constraintTop_toTopOf="@id/area_input_height">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_input_weight"
                android:textColor="@color/md_theme_onPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_weight_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:gravity="end|center_vertical"
                android:maxLines="1"
                android:text="0"
                android:textColor="@color/md_theme_onPrimary"
                app:layout_constraintBaseline_toBaselineOf="@id/label_unit_weight"
                app:layout_constraintEnd_toStartOf="@id/label_unit_weight"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="63" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_unit_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_unit_weight"
                android:textColor="@color/md_theme_onPrimary"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="24dp"
        android:background="@color/md_theme_secondary"
        app:layout_constraintEnd_toEndOf="@id/guideline_parent_end"
        app:layout_constraintStart_toStartOf="@id/guideline_parent_start"
        app:layout_constraintTop_toBottomOf="@id/area_input_height" />

</androidx.constraintlayout.widget.ConstraintLayout>